Implemented entity/data model and service layers in full